regression/generic/define-fun.smt2.expected.out
At line 1: syntax error, unexpected TK_NUM, expecting ')'
